# hyperliquid-integration

./: .gitignore  Readme.md  package-lock.json  package.json
app/: .gitignore  next.config.ts  package-lock.json  package.json
app/app/: actions.ts  layout.tsx  not-found.tsx  page.tsx  providers.tsx
app/app/api/hl/account/: route.ts
app/app/api/hl/order/: route.ts
app/app/dashboard/: Sidebar.tsx  layout.tsx  page.tsx
app/app/dashboard/portfolio/: page.tsx
app/app/dashboard/trade/: page.tsx
app/app/dashboard/trade/components/: ExecutionTerminal.tsx  MarketDepthPanel.tsx  MarketHeader.tsx  MarketSelector.tsx  MarketStatsStrip.tsx  Navbar.tsx  OrderBook.tsx  OrderPanel.tsx  RecentTrades.tsx  TradingChart.tsx
app/app/onboarding/: page.tsx
app/components/: cta-section.tsx  faq-section.tsx  features-section.tsx  footer.tsx  hero.tsx  logo-section.tsx  pricing-section.tsx  problem-section.tsx  solution-section.tsx  testimonials-section.tsx
app/components/ui/: logo-cloud-2.tsx
app/hooks/: useHyperliquidChart.ts  useHyperliquidOrder.ts  useHyperliquidStream.ts
app/lib/: config.ts  hl-signing.ts
apps/api/: nest-cli.json  package.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: Sidebar.tsx  page.tsx
proxy-hl-engine/: Cargo.toml  Dockerfile
proxy-hl-engine/src/: main.rs
